tests/snapshots/trace_solver@14040925160220638445.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: false
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    dont_eat_mut_inside_shared: false
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
  bundle_name: ~
  request: "&[[&x]]: &[&mut [T]]"
---
&[[&x]] @ s: &[&mut [T]]
// Applying rule `Deref`
[[&x]] @ *s: [&mut [T]]
// Applying rule `Constructor`
[&x] @ (*s).0: &mut [T]
// Applying rule `ConstructorRef`
&x @ &mut (*(*s).0).0: &mut T
// Type error for `&x @ &mut (*(*s).0).0: &mut T`: MutabilityMismatch
