tests/snapshots/trace_solver@14448888793953596513.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: "No"
    allow_ref_pat_on_ref_mut: false
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
  bundle_name: ~
  request: "&[[&x]]: &[&mut [T]]"
---
let &[[&x]]: &[&mut [T]] = s
// Applying rule `Deref`
let [[&x]]: [&mut [T]] = *s
// Applying rule `Constructor`
let [&x]: &mut [T] = (*s).0
// Applying rule `ConstructorRef`
let &x: &mut T = &mut (*(*s).0).0
// Type error for `let &x: &mut T = &mut (*(*s).0).0`: MutabilityMismatch
